--- a/AqueductBridge.csproj
+++ b/AqueductBridge.csproj
@@ -5,7 +5,11 @@
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
-    <ExileApiPath Condition="'$(ExileApiPath)' == ''">..\..\..\</ExileApiPath>
+    <!-- Try different possible locations for ExileApi assemblies -->
+    <ExileApiPath Condition="'$(ExileApiPath)' == '' AND Exists('..\..\..\ExileCore.dll')">..\..\..\</ExileApiPath>
+    <ExileApiPath Condition="'$(ExileApiPath)' == '' AND Exists('..\..\ExileCore.dll')">..\..\</ExileApiPath>
+    <ExileApiPath Condition="'$(ExileApiPath)' == '' AND Exists('..\..\..\..\ExileCore.dll')">..\..\..\..\</ExileApiPath>
+    <ExileApiPath Condition="'$(ExileApiPath)' == ''">..\..\..\..\</ExileApiPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,15 +20,19 @@
   <ItemGroup>
     <Reference Include="ExileCore">
       <HintPath>$(ExileApiPath)ExileCore.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="GameOffsets">
       <HintPath>$(ExileApiPath)GameOffsets.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="ImGui.NET">
       <HintPath>$(ExileApiPath)ImGui.NET.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="ProcessMemoryUtilities">
       <HintPath>$(ExileApiPath)ProcessMemoryUtilities.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
