--- a/AqueductBridge.csproj
+++ b/AqueductBridge.csproj
@@ -11,18 +11,23 @@
     <!--Don't bother setting anything to do with the output path, HUD will do it for you if you put the source code inside Plugins/Source-->
   </PropertyGroup>
 
+  <PropertyGroup>
+    <!-- Fallback path if exapiPackage environment variable is not set -->
+    <ExileCorePath Condition="'$(exapiPackage)' != ''">$(exapiPackage)</ExileCorePath>
+    <ExileCorePath Condition="'$(exapiPackage)' == ''">..\..\..</ExileCorePath>
+  </PropertyGroup>
+
   <ItemGroup>
-    <!--Rather than replacing this with absolute or relative paths, you should create an environment variable for wherever your HUD folder is-->
     <Reference Include="ExileCore">
-      <HintPath>$(exapiPackage)\ExileCore.dll</HintPath>
+      <HintPath>$(ExileCorePath)\ExileCore.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="GameOffsets">
-      <HintPath>$(exapiPackage)\GameOffsets.dll</HintPath>
+      <HintPath>$(ExileCorePath)\GameOffsets.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ProcessMemoryUtilities">
-      <HintPath>$(exapiPackage)\ProcessMemoryUtilities.dll</HintPath>
+      <HintPath>$(ExileCorePath)\ProcessMemoryUtilities.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
