--- a/AqueductBridge.csproj
+++ b/AqueductBridge.csproj
@@ -8,33 +8,21 @@
     <DebugType>embedded</DebugType>
     <PathMap>$(MSBuildProjectDirectory)=$(MSBuildProjectName)</PathMap>
     <EmbedAllSources>true</EmbedAllSources>
-    <!--Don't bother setting anything to do with the output path, HUD will do it for you if you put the source code inside Plugins/Source-->
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <!-- Fallback path if exapiPackage environment variable is not set -->
-    <ExileCorePath Condition="'$(exapiPackage)' != ''">$(exapiPackage)</ExileCorePath>
-    <ExileCorePath Condition="'$(exapiPackage)' == ''">..\..\..</ExileCorePath>
   </PropertyGroup>
 
   <ItemGroup>
     <Reference Include="ExileCore">
-      <HintPath>$(ExileCorePath)\ExileCore.dll</HintPath>
+      <HintPath>$(exapiPackage)\ExileCore.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="GameOffsets">
-      <HintPath>$(ExileCorePath)\GameOffsets.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="ProcessMemoryUtilities">
-      <HintPath>$(ExileCorePath)\ProcessMemoryUtilities.dll</HintPath>
+      <HintPath>$(exapiPackage)\GameOffsets.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="1.90.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
   </ItemGroup>
