--- a/AqueductBridge.csproj
+++ b/AqueductBridge.csproj
@@ -5,34 +5,15 @@
     <UseWindowsForms>true</UseWindowsForms>
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>latest</LangVersion>
-    <DebugType>embedded</DebugType>
-    <PathMap>$(MSBuildProjectDirectory)=$(MSBuildProjectName)</PathMap>
-    <EmbedAllSources>true</EmbedAllSources>
   </PropertyGroup>
-
-  <PropertyGroup>
-    <!-- Multiple fallback strategies for finding ExileCore assemblies -->
-    <ExileCorePath Condition="'$(exapiPackage)' != '' AND Exists('$(exapiPackage)\ExileCore.dll')">$(exapiPackage)</ExileCorePath>
-    <ExileCorePath Condition="'$(ExileCorePath)' == '' AND Exists('$(MSBuildProjectDirectory)\..\..\..\ExileCore.dll')">$(MSBuildProjectDirectory)\..\..\..</ExileCorePath>
-    <ExileCorePath Condition="'$(ExileCorePath)' == '' AND Exists('$(MSBuildProjectDirectory)\..\..\ExileCore.dll')">$(MSBuildProjectDirectory)\..\..\..</ExileCorePath>
-    <ExileCorePath Condition="'$(ExileCorePath)' == '' AND Exists('$(MSBuildProjectDirectory)\..\..\..\..\ExileCore.dll')">$(MSBuildProjectDirectory)\..\..\..</ExileCorePath>
-    <ExileCorePath Condition="'$(ExileCorePath)' == ''">..\..\..</ExileCorePath>
-  </PropertyGroup>
-
-  <Target Name="ValidateExileCorePath" BeforeTargets="BeforeBuild">
-    <Message Text="ExileCorePath resolved to: $(ExileCorePath)" Importance="high" />
-    <Message Text="Looking for ExileCore.dll at: $(ExileCorePath)\ExileCore.dll" Importance="high" />
-    <Error Text="ExileCore.dll not found at $(ExileCorePath)\ExileCore.dll. Please ensure the plugin is in the correct directory structure." 
-           Condition="!Exists('$(ExileCorePath)\ExileCore.dll')" />
-  </Target>
 
   <ItemGroup>
     <Reference Include="ExileCore">
-      <HintPath>$(ExileCorePath)\ExileCore.dll</HintPath>
+      <HintPath>C:\Users\Admin\Documents\POE1\ExileApi-Compiled-3.26.0.0.4\ExileCore.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="GameOffsets">
-      <HintPath>$(ExileCorePath)\GameOffsets.dll</HintPath>
+      <HintPath>C:\Users\Admin\Documents\POE1\ExileApi-Compiled-3.26.0.0.4\GameOffsets.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
