Fix RadarMovement.csproj to reference local ExileCore.dll
- Remove ExileCore package reference from nuget.org (doesn't exist)
- Add direct reference to local ExileCore.dll from ExileAPI installation
- Add proper SharpDX and SharpDX.Mathematics references
- Use relative paths that work from ExileAPI Plugins/Source directory
- Should now build successfully with: dotnet build RadarMovement.csproj --configuration Release

--- a/RadarMovement.csproj
+++ b/RadarMovement.csproj
@@ -13,12 +13,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExileCore" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <Reference Include="ExileCore">
+      <HintPath>..\..\..\..\ExileCore.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
     <Reference Include="SharpDX">
-      <HintPath>$(MSBuildProjectDirectory)\..\..\..\..\..\..\ExileApi\ExileCore.dll</HintPath>
+      <HintPath>..\..\..\..\SharpDX.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="SharpDX.Mathematics">
+      <HintPath>..\..\..\..\SharpDX.Mathematics.dll</HintPath>
       <Private>false</Private>
     </Reference>
   </ItemGroup>
