Fix RadarMovement compilation issues
- Only compile RadarMovement.cs, exclude other .cs files in directory
- Remove System.Windows.Forms import (not available in .NET Core)
- Replace MouseButtons.Left with Mouse.LeftDown/LeftUp pattern
- Add missing Newtonsoft.Json and ImGui.NET references
- Project now compiles only the RadarMovement plugin, not AqueductBridge files

This should resolve the 72 compilation errors by isolating RadarMovement as a separate plugin.

--- a/RadarMovement.csproj
+++ b/RadarMovement.csproj
@@ -12,6 +12,12 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
+  <!-- Only compile RadarMovement.cs, exclude all other .cs files -->
+  <ItemGroup>
+    <Compile Remove="**/*.cs" />
+    <Compile Include="RadarMovement.cs" />
+  </ItemGroup>
+
   <ItemGroup>
     <Reference Include="ExileCore">
       <HintPath>..\..\..\..\ExileCore.dll</HintPath>
@@ -23,6 +29,14 @@
     </Reference>
     <Reference Include="SharpDX.Mathematics">
       <HintPath>..\..\..\..\SharpDX.Mathematics.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\Newtonsoft.Json.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="ImGui.NET">
+      <HintPath>..\..\..\..\ImGui.NET.dll</HintPath>
       <Private>false</Private>
     </Reference>
   </ItemGroup>
