Phase 1: Implement EventBus + TaskNode Architecture (AreWeThereYet-1 based)
🏗️ **MAJOR ARCHITECTURE OVERHAUL**
- Complete rewrite of RadarMovement plugin using modern AreWeThereYet-1 patterns
- Replaced simple 'click closest target' with sophisticated task queue system
- Added event-driven architecture to prevent race conditions and coordinate actions

📋 **NEW FILES:**
- Utils/EventBus.cs - Event-driven coordination system with 8 event types
- RadarTask.cs - Intelligent task system with priority, validation, failure detection

🎯 **RADARTASK SYSTEM:**
- 6 task types: ClickWaypoint, ClickTransition, ClickPortal, ClickDoor, MoveToPosition, Investigate
- Smart priority system (Transitions=100, Waypoints=90, Portals=80, etc.)
- Automatic task validation, expiration, and failure detection
- Expected destination tracking for area transitions

⚡ **EVENTBUS INTEGRATION:**
- AreaChangeEvent, TargetFoundEvent, MovementCompleteEvent, TaskCompletedEvent
- PlayerStuckEvent, RenderEvent for coordinated plugin communication
- Prevents race conditions during area transitions and loading screens

🔧 **ENHANCED SETTINGS:**
- Organized into Movement/Visual/Debug categories
- Task scan intervals, completion distances, max ranges
- Debug modes: detailed logs, performance stats, visual queue display

🎨 **ADVANCED RENDERING:**
- Color-coded task visualization (Red=Waypoints, Orange=Transitions, etc.)
- Task queue display with current/queued tasks
- Real-time debug messages with timestamping
- Target markers with task type indicators

🧠 **INTELLIGENT FEATURES:**
- Area transition state management with isTransitioning flag
- Performance tracking: success rates, completed/failed task counts
- Automatic task cleanup and queue management
- State reset on unexpected area changes or player stuck

🎯 **AQUEDUCT FARMING FOCUS:**
- Designed specifically for complex Aqueduct navigation sequences
- Handles bridge->corridor->waypoint->exit progression
- Manages area transitions between Aqueduct and Dried

--- a/RadarMovement.csproj
+++ b/RadarMovement.csproj
@@ -12,10 +12,12 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
-  <!-- Only compile RadarMovement.cs, exclude all other .cs files -->
+  <!-- Only compile RadarMovement files, exclude other .cs files from parent directory -->
   <ItemGroup>
-    <Compile Remove="**/*.cs" />
+    <Compile Remove="../*.cs" />
     <Compile Include="RadarMovement.cs" />
+    <Compile Include="RadarTask.cs" />
+    <Compile Include="Utils/EventBus.cs" />
   </ItemGroup>
 
   <ItemGroup>
