Phase 2: LineOfSight Integration for Intelligent Terrain Analysis
🧠 **INTELLIGENT TERRAIN ANALYSIS**
- Integrated LineOfSight system based on AreWeThereYet-1 patterns
- PathStatus enum: Clear, Dashable, Blocked, Invalid for precise terrain classification
- Bresenham-like algorithm for efficient path tracing between points

🎯 **CRITICAL FOR AQUEDUCT FARMING**
- Filters blocked targets (prevents clicking waypoints across water channels)
- Finds alternate walkable routes when direct paths are obstructed
- Reduces priority for dashable targets (doors, obstacles requiring special movement)
- Prevents bot from getting stuck trying to reach inaccessible targets

📊 **NEW TERRAIN FEATURES:**
- Real-time terrain data analysis with 1-second refresh intervals
- PathStatus checking before creating tasks (blocks unreachable targets)
- Alternate route finding when direct paths are blocked
- Performance tracking: counts targets filtered by terrain analysis

⚙️ **ENHANCED SETTINGS:**
- Show Terrain Analysis: Real-time terrain info display
- Show Path Rays: Visual debugging of LineOfSight calculations
- Terrain Check Range: Configurable search radius for alternate routes
- Integrated with existing debug system for comprehensive monitoring

🎨 **ADVANCED VISUALIZATION:**
- Color-coded path rays: Green=Clear, Yellow=Dashable, Red=Blocked, Gray=Invalid
- Real-time terrain analysis display showing player/target terrain values
- Path status visualization for current task with color coding
- Filtered target counter to monitor terrain system effectiveness

🔧 **TASK SYSTEM INTEGRATION:**
- Pre-filters unreachable targets during task scanning (prevents futile attempts)
- Priority reduction for dashable obstacles (-10 priority modifier)
- Terrain status added to task metadata for debugging
- Automatic alternate route finding during movement execution

💡 **AQUEDUCT-SPECIFIC IMPROVEMENTS:**
- Understands water channels as blocked terrain (PathStatus.Blocked)
- Recognizes bridges and walkable area

--- a/RadarMovement.csproj
+++ b/RadarMovement.csproj
@@ -18,6 +18,7 @@
     <Compile Include="RadarMovement.cs" />
     <Compile Include="RadarTask.cs" />
     <Compile Include="Utils/EventBus.cs" />
+    <Compile Include="Utils/LineOfSight.cs" />
   </ItemGroup>
 
   <ItemGroup>
